# src/main/kotlin/com/vlr/scrapper/model/RegionRanking.kt
@@ -1,0 +1,9 @@
+package com.vlr.scrapper.model
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class RegionRanking(
+    val region: String,
+    val rankings: List<TeamRanking>
+)
